--- a/Mainsrc.ipynb
+++ b/Mainsrc.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPvPfQ/PM3+sUUSzQBAUMIR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +32,9 @@
         "id": "JEEowzWs6jgr"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"Hi\")"
+      ]
     }
   ]
 }
